--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/deanbirnie/saverr/issues"
   },
-  "homepage": "https://github.com/deanbirnie/saverr#readme"
+  "homepage": "https://github.com/deanbirnie/saverr#readme",
+  "dependencies": {
+    "nodemon": "^3.0.3",
+    "sqlite3": "^5.1.7"
+  }
 }
