Basic structure refactor, updated dependancies

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://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@github.com/deanbirnie/saverr.git"
+    "url": "git+https://github.com/deanbirnie/saverr.git"
   },
   "keywords": [],
   "author": "",
