--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,16 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start-backend": "nodemon index.js",
+    "start-backend": "nodemon ./src/db/default.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.10.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
-    "sqlite": "^5.1.1"
+    "prisma": "^5.10.1",
+    "sqlite3": "^5.1.7"
   }
 }
