Config changes for nodemon and vite to fix HMR in WSL

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start-backend": "nodemon --verbose index.js"
+    "start-backend": "nodemon -L index.js"
   },
   "keywords": [],
   "author": "",
