--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.10.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
