--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "back": "cd back-end && nodemon -L index.js",
-    "front": "cd front-end && npm run dev"
+    "front": "cd front-end && npm run dev",
+    "start": "node backend/index.js",
+    "build": "npm install && npm install --prefix front-end && npm run build --prefix front-end"
   },
   "repository": {
     "type": "git",
